# dart_md4c

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/laurensnol/dart_md4c_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  md4c_example.dart  md4c_html_example.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: dart_md4c.podspec
ios/Classes/: dart_md4c.c
lib/: dart_md4c.dart  dart_md4c_bindings.dart  dart_md4c_bindings_generated.dart
lib/src/: dart_md4c.dart  dart_md4c_bindings.dart  dart_md4c_html.dart  dart_md4c_html_bindings.dart
linux/: CMakeLists.txt
macos/: dart_md4c.podspec
macos/Classes/: dart_md4c.c
md4c/: CMakeLists.txt  md4c-utils.c  md4c-utils.h
src/: CMakeLists.txt  dart_md4c.c
windows/: CMakeLists.txt
